# GenoPHI

./: .git_ignore  .gitignore  COPYRIGHT  LICENSE  MANIFEST.in  README.html  README.md  data_acquisition_ubuntu.md  pyproject.toml  setup.py
data/experimental_validation/: BASEL_ECOR_interaction_matrix.csv  ECOR27_TnSeq_high_fitness_genes.csv
data/interation_matrices/: ecoli_interaction_matrix.csv  ecoli_interaction_matrix_subset.csv  klebsiella1_interaction_matrix.csv  klebsiella2_interaction_matrix.csv  pseudomonas_interaction_matrix.csv  vibrio_interaction_matrix.csv
genophi/: __init__.py  cli.py  feature_annotations.py  feature_selection.py  kmer_modeling_analysis.py  mmseqs2_clustering.py  select_feature_modeling.py
genophi/workflows/: __init__.py  assign_features_workflow.py  assign_predict_workflow.py  feature_annotations_workflow.py  feature_selection_workflow.py  feature_table_workflow.py  full_workflow.py  kmer_analysis_workflow.py  kmer_assign_features_workflow.py  kmer_assign_predict_workflow.py  kmer_full_workflow.py  kmer_table_workflow.py  modeling_workflow.py  prediction_workflow.py  protein_family_workflow.py  select_and_model_workflow.py
manuscript_scripts/results_analysis/: model_algorithm_comparison.py
manuscript_scripts/workflows/: Gaborieau_phage_modeling_feature_filter_inv_freq.py  Gaborieau_phage_modeling_hierarchical_inv_freq_filter.py  O157H7_slurm_submission.py  assign_threshold_iterations.py  assign_threshold_iterations_workflow.py  boostrap_predictions.py  bootstrap_kmer_export.py  bootstrap_kmer_modeling_workflow.py  bootstrap_usage_O157H7.py  bootstrap_usage_example.py  bootstrap_usage_vibrio.py  copy_select_files.py  copy_select_files_full_workflow.py  usage_example.py  (+11 more)
phage_modeling/: __init__.py  feature_annotations.py  feature_selection.py  kmer_modeling_analysis.py  mmseqs2_clustering.py  select_feature_modeling.py
phage_modeling.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+118 files in other folders)
